# monode

./: .gitignore  README.md  biome.json  docker-compose.yml
.github/workflows/: lint.yml  publish-backend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile_build_and_publish  restricted_filters.json
backend/src/: lib.rs
backend/src/lib/: event_filter.rs  event_listener.rs  serializable_event.rs  server.rs  timestamp.rs  top_k_tracker.rs
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
frontend/components/: block-spawner.tsx  hot-accounts-bubble-map.tsx  hot-slots-bubble-map.tsx  spinner.tsx
frontend/config/: env.ts
frontend/constants/: block-state.ts  common.ts  dex-config.ts  swap-provider-config.ts  transfer-config.ts
frontend/contexts/: events-context.tsx
frontend/data/: token-list.json
frontend/hooks/: use-block-execution-tracker.ts  use-block-state-tracker.ts  use-block-tracker.ts  use-blockchain-scroll-test.ts  use-blockchain-scroll.ts  use-blockchain-slow-motion.ts  use-bubble-map.ts  use-contention-tracker.ts  use-contract-labels.ts  use-events.ts  use-execution-event-blocks.ts  use-mouse-hover.ts  use-swap-events.ts  use-total-transactions.ts  use-tps.ts  use-transfer-events.ts  use-vertical-scroll.ts  use-virtualized-list.ts
frontend/lib/: abi-decode.ts  amount.ts  block-metrics.ts  timestamp.ts  token-list.ts  ui.ts  (+1 more)
monitoring/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
(+78 files in other folders)
